{
  "version": 4,
  "terraform_version": "1.4.7",
  "serial": 42,
  "lineage": "e7a4bd3b-f72e-c13b-906f-d960df1df456",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:747952139208:network-acl/acl-0ee62e3d794af5535",
            "default_network_acl_id": "acl-0ee62e3d794af5535",
            "egress": [],
            "id": "acl-0ee62e3d794af5535",
            "ingress": [],
            "owner_id": "747952139208",
            "subnet_ids": [
              "subnet-04df97d9fe0fcebae",
              "subnet-06362066345e0b732",
              "subnet-0650e530774964612",
              "subnet-07bdd98c033c5abe7"
            ],
            "tags": {
              "Name": "defaults-nacl"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "defaults-nacl",
              "Project": "ex-defaults"
            },
            "vpc_id": "vpc-08ba2403b6d695322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.self"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:747952139208:route-table/rtb-03858519d270ba956",
            "default_route_table_id": "rtb-03858519d270ba956",
            "id": "rtb-03858519d270ba956",
            "owner_id": "747952139208",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "defaults-default"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "defaults-default",
              "Project": "ex-defaults"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ba2403b6d695322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.self"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:747952139208:security-group/sg-0af089d9430fc820b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0af089d9430fc820b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "747952139208",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "defaults-default-sg"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "defaults-default-sg",
              "Project": "ex-defaults"
            },
            "vpc_id": "vpc-08ba2403b6d695322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.self"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9bb13e88367f5c2",
            "arn": "arn:aws:ec2:eu-west-1:747952139208:elastic-ip/eipalloc-0f9bb13e88367f5c2",
            "domain": "vpc",
            "id": "eipalloc-0f9bb13e88367f5c2",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-170-128-119.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.170.128.119",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Iac": "terraform",
              "Project": "ex-defaults"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": "public-eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9fac36e152f1aab",
            "arn": "arn:aws:ec2:eu-west-1:747952139208:elastic-ip/eipalloc-0d9fac36e152f1aab",
            "domain": "vpc",
            "id": "eipalloc-0d9fac36e152f1aab",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-247-9-127.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.247.9.127",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Iac": "terraform",
              "Project": "ex-defaults"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:747952139208:internet-gateway/igw-046ce0a042316d994",
            "id": "igw-046ce0a042316d994",
            "owner_id": "747952139208",
            "tags": {
              "Name": "defaults-igw"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "defaults-igw",
              "Project": "ex-defaults"
            },
            "vpc_id": "vpc-08ba2403b6d695322"
          },
          "dependencies": [
            "module.network.aws_vpc.self"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9bb13e88367f5c2",
            "association_id": "eipassoc-0a744d28ed9220883",
            "connectivity_type": "public",
            "id": "nat-0ef4645b7587da5ea",
            "network_interface_id": "eni-0350ac48123cc60c4",
            "private_ip": "10.0.20.121",
            "public_ip": "54.170.128.119",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04df97d9fe0fcebae",
            "tags_all": {
              "Iac": "terraform",
              "Project": "ex-defaults"
            }
          },
          "dependencies": [
            "module.network.aws_eip.self",
            "module.network.aws_internet_gateway.self",
            "module.network.aws_subnet.self",
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": "public-eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9fac36e152f1aab",
            "association_id": "eipassoc-0fc2ac87ed6b0666a",
            "connectivity_type": "public",
            "id": "nat-0a8b4d5cd3797e781",
            "network_interface_id": "eni-0c21c94817279f516",
            "private_ip": "10.0.79.82",
            "public_ip": "34.247.9.127",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07bdd98c033c5abe7",
            "tags_all": {
              "Iac": "terraform",
              "Project": "ex-defaults"
            }
          },
          "dependencies": [
            "module.network.aws_eip.self",
            "module.network.aws_internet_gateway.self",
            "module.network.aws_subnet.self",
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4191553011",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ee62e3d794af5535",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_default_network_acl.self",
            "module.network.aws_vpc.self"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2140386878",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ee62e3d794af5535",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_default_network_acl.self",
            "module.network.aws_vpc.self"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:747952139208:route-table/rtb-08303c2ab6b056ff0",
            "id": "rtb-08303c2ab6b056ff0",
            "owner_id": "747952139208",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ef4645b7587da5ea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "defaults-private-eu-west-1a"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "defaults-private-eu-west-1a",
              "Project": "ex-defaults"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ba2403b6d695322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.self",
            "module.network.aws_internet_gateway.self",
            "module.network.aws_nat_gateway.self",
            "module.network.aws_subnet.self",
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": "private-eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:747952139208:route-table/rtb-0d920350c08b04744",
            "id": "rtb-0d920350c08b04744",
            "owner_id": "747952139208",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a8b4d5cd3797e781",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "defaults-private-eu-west-1b"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "defaults-private-eu-west-1b",
              "Project": "ex-defaults"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ba2403b6d695322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.self",
            "module.network.aws_internet_gateway.self",
            "module.network.aws_nat_gateway.self",
            "module.network.aws_subnet.self",
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": "public-eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:747952139208:route-table/rtb-07d9ee3acb72a8a4e",
            "id": "rtb-07d9ee3acb72a8a4e",
            "owner_id": "747952139208",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-046ce0a042316d994",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "defaults-public-eu-west-1a"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "defaults-public-eu-west-1a",
              "Project": "ex-defaults"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ba2403b6d695322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.self",
            "module.network.aws_internet_gateway.self",
            "module.network.aws_nat_gateway.self",
            "module.network.aws_subnet.self",
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": "public-eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:747952139208:route-table/rtb-07a589d0164e15069",
            "id": "rtb-07a589d0164e15069",
            "owner_id": "747952139208",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-046ce0a042316d994",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "defaults-public-eu-west-1b"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "defaults-public-eu-west-1b",
              "Project": "ex-defaults"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ba2403b6d695322"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.self",
            "module.network.aws_internet_gateway.self",
            "module.network.aws_nat_gateway.self",
            "module.network.aws_subnet.self",
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb044bdd9a3c9221",
            "route_table_id": "rtb-08303c2ab6b056ff0",
            "subnet_id": "subnet-06362066345e0b732"
          },
          "dependencies": [
            "module.network.aws_eip.self",
            "module.network.aws_internet_gateway.self",
            "module.network.aws_nat_gateway.self",
            "module.network.aws_route_table.self",
            "module.network.aws_subnet.self",
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": "private-eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02668a1e209a031e4",
            "route_table_id": "rtb-0d920350c08b04744",
            "subnet_id": "subnet-0650e530774964612"
          },
          "dependencies": [
            "module.network.aws_eip.self",
            "module.network.aws_internet_gateway.self",
            "module.network.aws_nat_gateway.self",
            "module.network.aws_route_table.self",
            "module.network.aws_subnet.self",
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": "public-eu-west-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b371f199a3fb3df3",
            "route_table_id": "rtb-07d9ee3acb72a8a4e",
            "subnet_id": "subnet-04df97d9fe0fcebae"
          },
          "dependencies": [
            "module.network.aws_eip.self",
            "module.network.aws_internet_gateway.self",
            "module.network.aws_nat_gateway.self",
            "module.network.aws_route_table.self",
            "module.network.aws_subnet.self",
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": "public-eu-west-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e422cc96dbf29689",
            "route_table_id": "rtb-07a589d0164e15069",
            "subnet_id": "subnet-07bdd98c033c5abe7"
          },
          "dependencies": [
            "module.network.aws_eip.self",
            "module.network.aws_internet_gateway.self",
            "module.network.aws_nat_gateway.self",
            "module.network.aws_route_table.self",
            "module.network.aws_subnet.self",
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-eu-west-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:747952139208:subnet/subnet-06362066345e0b732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06362066345e0b732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "747952139208",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "defaults-private-eu-west-1a"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "defaults-private-eu-west-1a",
              "Project": "ex-defaults"
            },
            "vpc_id": "vpc-08ba2403b6d695322"
          },
          "dependencies": [
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": "private-eu-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:747952139208:subnet/subnet-0650e530774964612",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0650e530774964612",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "747952139208",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "defaults-private-eu-west-1b"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "defaults-private-eu-west-1b",
              "Project": "ex-defaults"
            },
            "vpc_id": "vpc-08ba2403b6d695322"
          },
          "dependencies": [
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": "public-eu-west-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:747952139208:subnet/subnet-04df97d9fe0fcebae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04df97d9fe0fcebae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "747952139208",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "defaults-public-eu-west-1a"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "defaults-public-eu-west-1a",
              "Project": "ex-defaults"
            },
            "vpc_id": "vpc-08ba2403b6d695322"
          },
          "dependencies": [
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": "public-eu-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:747952139208:subnet/subnet-07bdd98c033c5abe7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bdd98c033c5abe7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "747952139208",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "defaults-public-eu-west-1b"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "defaults-public-eu-west-1b",
              "Project": "ex-defaults"
            },
            "vpc_id": "vpc-08ba2403b6d695322"
          },
          "dependencies": [
            "module.network.aws_vpc.self",
            "module.network.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:747952139208:vpc/vpc-08ba2403b6d695322",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ee62e3d794af5535",
            "default_route_table_id": "rtb-03858519d270ba956",
            "default_security_group_id": "sg-0af089d9430fc820b",
            "dhcp_options_id": "dopt-0d2ea92ec99d64750",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ba2403b6d695322",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03858519d270ba956",
            "owner_id": "747952139208",
            "tags": {
              "Name": "defaults-vpc"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "defaults-vpc",
              "Project": "ex-defaults"
            }
          }
        }
      ]
    }
  ]
}